...
      <StatusBar barStyle="light-content" />
      <Text>Select your players</Text>
      <PlayerSelection players={players} onPlayerPress={onPlayerPress} />
      <Button
        label="New Player"
        backgroundColor="blue"
        testID="app.newPlayerButton"
        onPress={() => setNewPlayerModalOpened(true)}
      />
    </SafeAreaView>
  );
};

...
